@@ -8,6 +8,11 @@
 #  endif
 #endif
 
+#define DT_UNKNOWN 0
+#define DT_DIR (S_IFDIR>>12)
+#define DT_REG (S_IFREG>>12)
+#define DT_LNK 10
+
 struct direct
 {
     long d_namlen;
@@ -15,8 +20,7 @@ struct direct
     char *d_name;
     char *d_altname; /* short name */
     short d_altlen;
-    char d_isdir; /* directory */
-    char d_isrep; /* reparse point */
+    uint8_t d_type;
 };
 typedef struct {
     WCHAR *start;
